hermes_fuzz_executed/fuzz_11_execution
'use strict';
const obj1 = { value: 1 };
var obj2 = Object.assign({}, obj1);
 
'use strict'
 
var array = []
"abcab".includes("ab");
        ^^
SyntaxError: Invalid regular expression

    at Function.createError (C:\src\hermes\hermes\node_modules\source-map-support\source-map-support.js:274:13)
    at regularExpression (internal/regexec.js:135:17)
    at Object.exec (internal/regexec.js:302:13)
    at /some/path/hermes/lib/runtime/builtin/regex/regex.js:171:47
    at Array.forEach (<anonymous>)
    at matchOne (C:\src\hermes\hermes\lib\runtime\builtin\regex/regex.js:161:60)
    at /some/path/node_modules/babel-runtime/core-js/isIterateeCall/index.js:53:28
    at /some/path/node_modules/babel-runtime/core-js/isIterateeCall/index.js:23:9
    at baseUnary (C:\src\hermes\hermes\lib\runtime\builtin\regex/utils.js:15:28)
    at Object.keys.forEach.key (/some/path/hermes/lib/runtime/builtin/regex/regex.js:250:20)
    at /some/path/hermes/lib/runtime/builtin/symbol/index.js:41:31
    at Array.forEach (<anonymous>)
    at defineProperties (/some/path/hermes/lib/runtime/builtin/symbol/index.js:37:48)
    at /some/path/hermes/lib/runtime/builtin/symbol/index.js:147:30
    at Array.forEach (<anonymous>)
*/


Execution Output ------------------:
test.js:9:9: error: invalid expression
        ^^
        ^
